fix(backend): change column definition of the car description to prevent from too big texts