@@ -21,7 +21,6 @@ import org.springframework.web.bind.annotation.*;
 import java.util.List;
 import java.util.stream.Collectors;
 
-@CrossOrigin(origins = "*")
 @RestController
 @RequestMapping("/api/vehicle")
 @RequiredArgsConstructor
@@ -38,31 +37,26 @@ public class VehicleController {
     private final VehicleImageService vehicleImageService;
     private final VehicleImageMapper imageMapper;
 
-    @Operation(summary = "Get all vehicles", description = "Retrieve a list of all available vehicles.")
+    // Vehicles
     @GetMapping
     @ResponseStatus(HttpStatus.OK)
     public List<VehicleResponse> getAllVehicles() {
         return vehicleService.getAll().stream().map(responseMapper::toDto).toList();
     }
 
-    @Operation(summary = "Get vehicle by ID", description = "Retrieve details of a specific vehicle by its ID.")
-    @Parameter(name = "id", description = "The ID of the vehicle to retrieve.", required = true)
     @GetMapping("/{id}")
     @ResponseStatus(HttpStatus.OK)
     public VehicleResponse getVehicleById(@PathVariable Long id) {
         return responseMapper.toDto(vehicleService.getById(id));
     }
 
-    @Operation(summary = "Get vehicles by class", description = "Retrieve vehicles belonging to a specific class.")
-    @Parameter(name = "class", description = "The class of vehicles to retrieve.", required = true)
-    @GetMapping("/class/{class}")
+    @GetMapping("/class/{className}")
     @ResponseStatus(HttpStatus.OK)
-    public List<VehicleResponse> getVehiclesByClass(@PathVariable(name = "class") String className) {
+    public List<VehicleResponse> getVehiclesByClass(@PathVariable String className) {
         VehicleClass vehicleClass = VehicleClass.valueOf(className);
         return vehicleService.getByClass(vehicleClass).stream().map(responseMapper::toDto).toList();
     }
 
-    @Operation(summary = "Create a new vehicle", description = "Add a new vehicle to the system.")
     @PostMapping
     @ResponseStatus(HttpStatus.CREATED)
     public VehicleResponse createVehicle(@RequestBody VehicleRequest vehicleRequest) {
@@ -70,32 +64,26 @@ public class VehicleController {
         return responseMapper.toDto(vehicleService.add(vehicle));
     }
 
-    @Operation(summary = "Update vehicle details", description = "Update the details of an existing vehicle by its ID.")
-    @Parameter(name = "id", description = "The ID of the vehicle to update.", required = true)
-    @PutMapping("{id}")
+    @PutMapping("/{id}")
     @ResponseStatus(HttpStatus.ACCEPTED)
     public VehicleResponse updateVehicle(@PathVariable Long id, @RequestBody VehicleRequest vehicleRequest) {
         Vehicle vehicle = requestMapper.toEntity(vehicleRequest);
         return responseMapper.toDto(vehicleService.update(id, vehicle));
     }
 
-    @Operation(summary = "Get all vehicle prices", description = "Retrieve a list of all vehicle prices.")
+    // Prices
     @GetMapping("/price")
     @ResponseStatus(HttpStatus.OK)
     public List<VehiclePriceResponse> getAllVehiclePrices() {
         return vehiclePriceService.getAllVehiclePrices().stream().map(priceMapper::toDto).toList();
     }
 
-    @Operation(summary = "Get vehicle price by ID", description = "Retrieve a specific vehicle price by its ID.")
-    @Parameter(name = "id", description = "The ID of the vehicle price to retrieve.", required = true)
-    @GetMapping("/price/{id}")
+    @GetMapping("/price/{priceId}")
     @ResponseStatus(HttpStatus.OK)
-    public VehiclePriceResponse getVehiclePriceById(@PathVariable Long id) {
-        return priceMapper.toDto(vehiclePriceService.getById(id));
+    public VehiclePriceResponse getVehiclePriceById(@PathVariable Long priceId) {
+        return priceMapper.toDto(vehiclePriceService.getById(priceId));
     }
 
-    @Operation(summary = "Get prices for a specific vehicle", description = "Retrieve all pricing details for a given vehicle by its ID.")
-    @Parameter(name = "id", description = "The ID of the vehicle whose prices to retrieve.", required = true)
     @GetMapping("/{id}/price")
     @ResponseStatus(HttpStatus.OK)
     public List<VehiclePriceResponse> getVehiclePriceByVehicleId(@PathVariable Long id) {
@@ -103,7 +91,6 @@ public class VehicleController {
         return vehiclePriceService.getByVehicle(vehicle).stream().map(priceMapper::toDto).toList();
     }
 
-    @Operation(summary = "Create a new vehicle price", description = "Add a new price for a specific vehicle.")
     @PostMapping("/price")
     @ResponseStatus(HttpStatus.CREATED)
     public VehiclePriceResponse createVehiclePrice(@RequestBody VehiclePriceRequest vehiclePriceRequest) {
@@ -113,40 +100,39 @@ public class VehicleController {
         );
     }
 
-    @Operation(summary = "Update a vehicle price", description = "Update an existing price for a specific vehicle by price ID.")
-    @Parameter(name = "id", description = "The ID of the vehicle price to update.", required = true)
-    @PutMapping("/price/{id}")
+    @PutMapping("/price/{priceId}")
     @ResponseStatus(HttpStatus.ACCEPTED)
-    public VehiclePriceResponse updateVehiclePrice(@PathVariable Long id, @RequestBody VehiclePriceRequest vehiclePriceRequest) {
+    public VehiclePriceResponse updateVehiclePrice(@PathVariable Long priceId, @RequestBody VehiclePriceRequest vehiclePriceRequest) {
         Vehicle vehicle = vehicleService.getById(vehiclePriceRequest.getVehicleId());
         return priceMapper.toDto(
-                vehiclePriceService.updateVehiclePriceById(id, vehiclePriceRequest.toVehiclePrice(vehicle))
+                vehiclePriceService.updateVehiclePriceById(priceId, vehiclePriceRequest.toVehiclePrice(vehicle))
         );
     }
 
-    @GetMapping("/image")
-    @ResponseStatus(HttpStatus.OK)
-    public List<VehicleImageResponse> getVehicleImages() {
-        return vehicleImageService.getAllVehicleImages()
-                .stream()
-                .map(imageMapper::toDto)
-                .collect(Collectors.toList());
-    }
-
-    @GetMapping("/{id}/image")
+    // Images
+    @GetMapping("/{id}/images")
     @ResponseStatus(HttpStatus.OK)
     public List<VehicleImageResponse> getVehicleImagesByVehicleId(@PathVariable Long id) {
         Vehicle vehicle = vehicleService.getById(id);
         return vehicleImageService.getByVehicle(vehicle)
                 .stream()
                 .map(imageMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    @GetMapping("/image/{id}")
+    @GetMapping("/image")
     @ResponseStatus(HttpStatus.OK)
-    public VehicleImageResponse getVehicleImageById(@PathVariable Long id) {
-        return imageMapper.toDto(vehicleImageService.getById(id));
+    public List<VehicleImageResponse> getAllVehicleImages() {
+        return vehicleImageService.getAllVehicleImages()
+                .stream()
+                .map(imageMapper::toDto)
+                .toList();
+    }
+
+    @GetMapping("/image/{imageId}")
+    @ResponseStatus(HttpStatus.OK)
+    public VehicleImageResponse getVehicleImageById(@PathVariable Long imageId) {
+        return imageMapper.toDto(vehicleImageService.getById(imageId));
     }
 
     @PostMapping("/image")
@@ -158,10 +144,9 @@ public class VehicleController {
         return imageMapper.toDto(vehicleImageService.addVehicleImage(vehicleImage));
     }
 
-    @DeleteMapping("/image/{id}")
+    @DeleteMapping("/image/{imageId}")
     @ResponseStatus(HttpStatus.OK)
-    public void deleteVehicleImage(@PathVariable Long id) {
-        vehicleImageService.deleteById(id);
+    public void deleteVehicleImage(@PathVariable Long imageId) {
+        vehicleImageService.deleteById(imageId);
     }
-
 }
